tests/baselines/reference/templateStringWithEmbeddedYieldKeyword.errors.txt
tests/cases/conformance/es6/templates/templateStringWithEmbeddedYieldKeyword.ts(1,15): error TS1005: '(' expected.


==== tests/cases/conformance/es6/templates/templateStringWithEmbeddedYieldKeyword.ts (1 errors) ====
    function* gen {
                  ~
!!! error TS1005: '(' expected.
        // Once this is supported, yield *must* be parenthesized.
        var x = `abc${ yield 10 }def`;
    }
    